# umbra

./: --help  .gitattributes  .gitignore  Cargo.toml  LICENSE.md  PROTOCOL.md  README.md  THIRD_PARTY_NOTICES.md  analysis.json  debug_nullable.rs  debug_unique_constraint.rs  lsan-suppressions.txt
.cargo/: config.toml
.github/workflows/: ci.yml  safety.yml  test.yml
benches/: benchmark.sh  db_benchmark.rs  numeric_benchmark.rs  select_benchmark.rs  stress_benchmark.rs  uuid_benchmark.rs
client/: main.go
client/db/: client.go
crates/regex/src/: dfa.rs  fsm.rs  (+5 more)
src/: db.rs  lib.rs  main.rs  os.rs  vm.rs
src/client/: db.go  go.mod  go.sum  main.go  seed.sql
src/collections/: smallvec.rs
src/core/: btree.rs  cache.rs  date.rs  db.rs  hash.rs  io.rs  log.rs  mod.rs  numeric.rs  page.rs  pager.rs  random.rs  smallvec.rs  uuid.rs
src/db/: context.rs  metadata.rs  mod.rs  schema.rs
src/executor/: ddl.rs  dispatch.rs  dml.rs  mod.rs  operator.rs  query.rs
src/sql/: analyzer.rs  cost.rs  datetime.rs  mod.rs  optimiser.rs  parser.rs  planner.rs  prepare.rs  sql.rs  statement.rs  statements.rs  tokenizer.rs  tokens.rs  value.rs
src/storage/: btree.rs  index.rs  mod.rs  tuple.rs
src/tcp/: mod.rs  pool.rs  protocol.rs  server.rs
src/vm/: cost.rs  expression.rs  functions.rs  math.rs  mod.rs  planner.rs  planner.rs~  statement.rs
tests/: end_to_end_test.rs  integration_test.rs
tests/sql/: employees-and-departments.sql  orders-and-users.sql  user-requests.sql  users-json.sql
usql/: Cargo.toml
usql/src/: commands.rs  highlight.rs  main.rs  palette.rs
(+91 files in other folders)
