[package]
name = "umbra"
description = "A blazingly fast (and hungry) database"
version = "2.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[features]
default = ["simd"]
simd = []

[profile.release]
lto = "fat"
debug = true

[target.'cfg(unix)'.dependencies]
libc ="0.2.172"

[workspace]
members = ["usql"]

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
fake = {version = "4.3.0", features = ["derive", "chrono"] }
rusqlite = "0.36.0"

[[bench]]
name = "db_benchmark"
harness = false

[[bench]]
name = "select_benchmark"
harness = false

[[bench]]
name = "numeric_benchmark"
harness = false

[[bench]]
name = "uuid_benchmark"
harness = false

[[bench]]
name = "stress_benchmark"
harness = false
